tests/good/8/main.sm
(module Main imports (StdLib Lib))

(vars (
  (let a 0)
  (let b 0)
))

(functions (
  (function main ()
    (begin
      (someFun)
      (write! a)
      (write! b)
      (let exitcode 0)
      exitcode
    )
  )
))
