tests/bad/leaky_var_while/main.sm
(module Main imports (StdLib))

(vars ())

(functions (
  (function main ()
    (begin
      (while tt
        (let x 0)
      )
      (set! x 0) # Invalid
      0
    )
  )
))
